@@ -3,6 +3,7 @@ Changed in version 0.7.5.0:
      multiple `CompletionFunc`s
    * Fix warnings
    * Bump the lower bound to ghc-8.0
+   * Add `debugTerminalKeys` to help debug input problems
 
 Changed in version 0.7.4.3:
    * Bump upper bounds on base, containers, stm and unix
